# hackathon-interledger-market-Accesible

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PAYMENT_APPROVAL_FLOW.md  PAYMENT_APPROVAL_SUMMARY.md  PAYMENT_CONFIRMATION_IMPLEMENTATION.md  PAYMENT_CONFIRMATION_QUICKSTART.md  PAYMENT_CONFIRMATION_README.md  PAYMENT_CONFIRMATION_SETUP.md  PAYMENT_INTEGRATION_QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  startHere.md  test_payment_confirmation.sh
marketplace-py/: .dockerignore  .gitignore  AUDIO_MAPPINGS_SUMMARY.md  AUDIO_STATUS_UPDATED.md  Dockerfile  README.md  manage.py  pyproject.toml  schema_types.py
marketplace-py/audio/: admin.py  apps.py  forms.py  mixins.py  models.py  serializers.py  signals.py  urls.py  views.py
marketplace-py/audio/migrations/: 0001_initial.py  0002_audiocontribution.py  0003_staticuielement.py
marketplace-py/audio/templatetags/: audio_tags.py
marketplace-py/data/: demo_users.json
marketplace-py/jobs/: admin.py  apps.py  audio_support.py  forms.py  models.py  payments_utils.py  urls.py  views.py  webhooks.py
marketplace-py/jobs/migrations/: 0002_initial.py  (+20 more)
marketplace-py/marketplace/: context_processors.py  settings.py  urls.py  views.py
marketplace-py/open_payments/: crud_open_payments.py
marketplace-py/schemas/: base_schema.py
marketplace-py/scripts/: add_audio_mappings.py
marketplace-py/templates/: base.html
marketplace-py/users/: admin.py  forms.py  models.py  urls.py  views.py
marketplace-py/utilities/: openpayments.py
todo/: TODO.md  (+28 more)
(+172 files in other folders)
