[project]
name = "hackathon-interledger-market"
version = "0.1.0"
description = "Django-based marketplace system with accessibility and multi-language support for an Interledger-powered exchange"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2.0",
    "django-modeltranslation>=0.18.12",
    "django-rosetta>=0.9.8",
    "Pillow>=10.0.0",
    "djangorestframework>=3.14.0",
    "gunicorn>=21.2.0",
]
