[project]
name = "hackathon-interledger-market"
version = "0.1.0"
description = "Django-based marketplace system with accessibility and multi-language support for an Interledger-powered exchange"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2.0",
    "django-modeltranslation>=0.18.12",
    "django-rosetta>=0.9.8",
    "Pillow>=10.0.0",
    "djangorestframework>=3.14.0",
    "gunicorn>=21.2.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-ulid[pydantic]>=3.0.0",
    "httpx>=0.24.0",
    "http-message-signatures>=1.0.0",
    "http-sf>=0.9.0",
    "cryptography>=41.0.0",
]
